<resources>
    <string name="app_name">你好世界</string>
    <string name="login_wx">微信登录</string>
    <string name="login_other">选择其他登录方式</string>
    <string name="bt_next">下一步</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">注 册</string>
    <string name="ed_password">密码</string>
    <string name="ed_user">用户名</string>
    <string name="ed_confirm_password">确认密码</string>
    <string name="ed_password_new">新密码</string>
    <string name="bt_won">重置成功</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <!-- Emoji -->
    <string name="face_recently">最近</string>
    <string name="face_Emoji">Emoji</string>
    <string name="face_set_one">默认</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">关注</string>
    <string name="tab_text_2">世界</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="city">城市</string>
    <string name="bt_self">个人信息</string>
    <string name="bt_option">修改密码</string>
    <string name="bt_backApp">退出登录</string>
    <string name="ed_usename">用户名</string>
    <string name="tv_username">用户名：</string>
    <string name="tv_content">个人简介：</string>
    <string name="ed_content">个人简介</string>
    <string name="tv_sex">性别:</string>
    <string name="rb_male">男</string>
    <string name="rb_female">女</string>
    <string name="tv_Age">年龄：</string>
    <string name="tv_city">城市：</string>
    <string name="ed_city">城市</string>
    <string name="groupChat">发起群聊</string>
    <string name="add_friend">添加朋友</string>
    <string name="ed_user_hind">账户号/手机号</string>
    <string name="bt_af_search">搜索</string>
    <string name="bt_sendMessage">发送信息</string>
    <string name="bt_addFriendThis">添加朋友</string>
    <string name="sample_title_default">Default view</string>
    <string name="sample_subtitle_default">Dialogs and messages with default style</string>
    <string name="sample_title_attrs">Styled view</string>
    <string name="sample_subtitle_attrs">Styled components using embedded attributes</string>
    <string name="sample_title_layout">Custom layout</string>
    <string name="sample_subtitle_layout">Custom layouts to change default views position</string>
    <string name="sample_title_holder">Custom view holder</string>
    <string name="sample_subtitle_holder">Custom view holder to extend default behaviour for a new features</string>
    <string name="sample_title_custom_content">Custom content type</string>
    <string name="sample_subtitle_custom_content">Custom message content on the example of voice message</string>

    <string name="hint_enter_a_message">Type a message…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>

    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>

    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>

    <string name="start_typing_status">Start typing</string>
    <string name="stop_typing_status">Stop typing</string>
    <string name="friend">朋 友</string>
    <string name="bt_deleteFriend">删除好友</string>
    <string name="info">消息</string>
    <string name="title">提示</string>
    <string name="message">内容</string>
    <string name="on">确认</string>
    <string name="off">取消</string>
    <string name="searchMessage">查看聊天记录</string>
    <string name="delectMessage">清空聊天记录</string>
    <string name="bt_addFriend">添加好友</string>
    <string name="change_face">修改头像</string>
    <string name="face">头像</string>
    <string name="search_hisMsg">查找聊天记录</string>
    <string name="bt_addBlackList">添加黑名单</string>
    <string name="ed_phone">手机号码</string>
    <string name="ed_verify">验证码</string>
    <string name="confirm_verify">发送验证码</string>
    <string name="verify">发送</string>
    <string name="login_phone">手机号登录</string>
    <string name="forgive">忘记密码</string>
    <string name="other_login">登录</string>
    <string name="send_verify">发送验证码</string>
</resources>
