<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="230dp"
    android:minWidth="230dp"
    tools:context=".view.selfInfoDialog"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#00000000"
    android:layout_gravity="center">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/self_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_username"
        android:textStyle="bold"
        android:textSize="16dp"
        ></TextView>
    <EditText
        android:id="@+id/self_name_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ed_usename"
        ></EditText>
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/self_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_content"
            android:textStyle="bold"
            android:textSize="16dp"
            ></TextView>
        <EditText
            android:id="@+id/self_content_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ed_content"
            android:maxLines="3"
            ></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/self_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sex"
            android:textStyle="bold"
            android:textSize="16dp"
            ></TextView>
<RadioGroup
    android:id="@+id/radio_sex"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rb_male"
        android:checked="true"></RadioButton>
    <RadioButton
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rb_female"></RadioButton>
</RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/self_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_Age"
            android:textStyle="bold"
            android:textSize="16dp"/>
        <EditText
            android:id="@+id/self_age_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxEms="3"
            ></EditText>
    </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/self_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_city"
        android:textStyle="bold"
        android:textSize="16dp"/>
    <EditText
        android:id="@+id/selt_city_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxEms="10"
        android:hint="@string/ed_city"
        android:inputType="text"
        ></EditText>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
    <Button
        android:id="@+id/self_save"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:background="@drawable/shape_bt_other"
        android:text="保存"
        android:layout_margin="3dp"></Button>
    <Button
        android:id="@+id/self_cancel"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:background="@drawable/shape_bt_other"
        android:text="取消"
        android:layout_margin="3dp"></Button>
    </LinearLayout>
</LinearLayout>