<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ed_design4"
    android:padding="8dp">
<TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:text="@string/title"
    android:layout_gravity="center"
    android:gravity="center"
    android:textStyle="bold"
    android:textSize="16dp"
    ></TextView>
    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/message"
        ></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <Button
        android:id="@+id/on"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="36dp"
        android:layout_margin="3dp"
        android:text="@string/on"
        android:padding="1dp"
        android:background="@drawable/bt_design2"
        ></Button>
    <Button
        android:id="@+id/off"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="36dp"
        android:text="@string/off"
        android:layout_margin="3dp"
        android:padding="1dp"
        android:background="@drawable/bt_design2"
        ></Button>
    </LinearLayout>
</LinearLayout>