<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment_register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/registerbackground"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#60000000"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/back"
            android:theme="?attr/actionBarTheme" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register"
         android:textSize="23dp"
         android:layout_gravity="center"
         android:layout_marginBottom="60dp"
         android:layout_marginTop="100dp"
         android:textColor="#ffffff"
         android:textFontWeight="200"
         android:fontFamily="宋体"
         android:textStyle="bold"
         >
     </TextView>
`   <EditText
        android:id="@+id/ed_user"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:hint="@string/ed_user"
        android:background="@drawable/ed_design"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/user"
        android:paddingLeft="15dp"
        android:drawablePadding="15dp"
        ></EditText>
        <EditText
        android:id="@+id/ed_phone"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:hint="@string/ed_phone"
        android:background="@drawable/ed_design"
        android:layout_marginBottom="15dp"
        android:paddingLeft="15dp"
        android:drawablePadding="15dp"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/phone"
        android:inputType="phone"
        ></EditText>
        <EditText
        android:id="@+id/ed_verify"
            android:layout_width="230dp"
            android:layout_height="40dp"
        android:hint="@string/ed_verify"
        android:background="@drawable/ed_design"
            android:layout_marginBottom="15dp"
            android:paddingLeft="15dp"
            android:drawablePadding="15dp"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/verify"
        android:inputType="number"
        ></EditText>
        <EditText
        android:id="@+id/ed_password"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:hint="@string/ed_password"
        android:background="@drawable/ed_design"
        android:layout_marginBottom="15dp"
        android:paddingLeft="15dp"
        android:drawablePadding="15dp"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/password"
        ></EditText>
        `   <EditText
        android:id="@+id/ed_confirm_password"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:hint="@string/ed_confirm_password"
        android:background="@drawable/ed_design"
        android:layout_marginBottom="15dp"
        android:paddingLeft="15dp"
        android:drawablePadding="15dp"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/confirm_password"
        ></EditText>
        <Button
            android:id="@+id/confirm_verify"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:text="@string/confirm_verify"
            android:background="@drawable/bt_design"
            android:layout_gravity="center"
            android:textColor="#bfbfbf"
            >
        </Button>
        <Button
            android:id="@+id/confirm_register"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:text="@string/register"
            android:background="@drawable/bt_design"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="#bfbfbf"
            >
        </Button>

    </LinearLayout>
</LinearLayout>