<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddFriendActivity"
    android:background="#000000"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_friend"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="20sp"
            ></TextView>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#000000"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/ed_af_search"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:background="@drawable/ed_design3"
                android:hint="@string/ed_user_hind"
                android:gravity="center"
                ></EditText>
            <Button
                android:id="@+id/bt_af_search"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="38dp"
                android:text="@string/bt_af_search"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/bt_design2"
                android:layout_marginRight="5dp"
                ></Button>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_af_usename"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:text="@string/ed_usename"
            android:textColor="#90ffffff"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
    <fragment
        android:id="@+id/fa_add_friend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.example.helloworld.view.fragment_black"
        />
</LinearLayout>