<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OtherLoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbackground3"
            ></ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#60000000"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_login"
                android:textSize="23dp"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:fontFamily="宋体"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                />
        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/ed_user_login"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:hint="@string/ed_user"
            android:background="@drawable/ed_design2"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/user"
            android:paddingLeft="15dp"
            android:drawablePadding="15dp"
            android:text=""
            ></EditText>
        `   <EditText
        android:id="@+id/ed_password_login"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:hint="@string/ed_password"
        android:background="@drawable/ed_design2"
        android:layout_marginBottom="15dp"
        android:paddingLeft="15dp"
        android:drawablePadding="15dp"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/password"
            android:inputType="numberPassword"
            android:text=""
        ></EditText>
            <Button
                android:id="@+id/login"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:text="@string/login"
                android:background="@drawable/bt_design"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:textColor="#bfbfbf"
                >
            </Button>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>