<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/registerbackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="#60000000"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/check_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/check_id"></ImageView>

            <View
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:layout_gravity="center_vertical"
                android:background="#1296db"></View>

            <ImageView
                android:id="@+id/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/reset_password"></ImageView>

            <View
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:layout_gravity="center_vertical"
                android:background="#ffffff"></View>

            <ImageView
                android:id="@+id/win"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/defect"></ImageView>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgive"
            android:textSize="23dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:textColor="#ffffff"
            android:textFontWeight="100"
            android:fontFamily="宋体"
            android:textStyle="bold"
            >
        </TextView>
        <EditText
            android:id="@+id/ed_forgive_phone_number"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@drawable/ed_design"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="15dp"
            android:hint="@string/ed_password_new"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="15dp"></EditText>

        <EditText
            android:id="@+id/ed_forgive_verification_code"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/ed_design"
            android:drawableLeft="@drawable/confirm_password"
            android:drawablePadding="15dp"
            android:hint="@string/ed_confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="15dp"></EditText>

        <Button
            android:id="@+id/bt_next_2"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bt_next"
            android:gravity="center"
            android:text="@string/bt_next"
            android:textColor="#bfbfbf"></Button>
    </LinearLayout>
</LinearLayout>